codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__default_hook_completed_before_reveal_omits_context_only_completion_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"started hidden:\\n{started_hidden_snapshot}\\nhistory:\\n{history}\")"
---
started hidden:

history:
