codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__error_event_history.snap
---
source: tui/src/chatwidget/tests.rs
expression: last
---
■ Something failed.
Update available. See https://github.com/openai/codex for installation options.
