codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__eval_capture_start_picker_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Pick the start message
  Pick the first instruction for the specific code change or interaction you
  wanted to give feedback on.

› 1. [0s ago] Please help me fix the build errors

  Press enter to confirm or esc to go back
