codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__eval_capture_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Send eval sample to the codex team?

  If you choose Yes, it will upload the full bundle
  to the team:
    • manifest.json
    • rollout.jsonl
    • repo.patch
    • codex-logs.log

  This may include file paths, code snippets, and tool outputs.

› 1. Yes  Upload the full bundle to the team for troubleshooting and model
          improvement.
  2. No   Keep it local only.

  Press enter to confirm or esc to go back
